Correção de bug de caminhos FXML