@@ -21,13 +21,12 @@ public class RegexController {
 
 
     public void onTestar(ActionEvent actionEvent) {
-//        Pattern regexJava = criaRegex("(a+b+c)*");
-        regex=criaRegex(tf_expressao.getText());
+        regex = criaRegex(tf_expressao.getText());
         palavra = tf_palavra.getText().replaceAll(" ","");
         boolean resultado = testaPalavra(palavra);
-        if(palavra.compareTo("")==0)
+        if (palavra.compareTo("") == 0)
             palavra="ε";
-        if(resultado)
+        if (resultado)
             lb_resultado.setText("A palavra "+palavra+" pertence a linguagem");
         else
             lb_resultado.setText("A palavra "+palavra+" não pertence a linguagem");
@@ -40,64 +39,62 @@ public class RegexController {
 
     public void onGerar(ActionEvent actionEvent) {
         regex=criaRegex(tf_expressao.getText());
-        String label="{ ";
+        StringBuilder label= new StringBuilder("{ ");
         int i = 0;
-        if(troca){
+        if (troca) {
             palavras= new ArrayList<>();
             gerarPalavras(palavras);
         }
-        if(palavras.get(0).compareTo("")==0){
-            label+="ε, ";
+        if (palavras.getFirst().compareTo("") == 0){
+            label.append("ε, ");
             i++;
         }
         for (; i < palavras.size()-1; i++)
-            label+=palavras.get(i)+", ";
-        label+=palavras.get(palavras.size()-1)+" }";
-        lb_palavras.setText(label);
+            label.append(palavras.get(i)).append(", ");
+        label.append(palavras.getLast()).append(" }");
+        lb_palavras.setText(label.toString());
     }
 
     private void gerarPalavras(ArrayList<String> palavras) {
-       int cont=0,ini=0;
-       String palavra;
-       ArrayList<String> testadas= new ArrayList<>();
-       testadas.add("");
-       boolean flag=true;
-       if(testaPalavra("")){
-           palavras.add("");
-           cont++;
-       }
-        while(cont<10 && flag){
-           for (;flag && ini<testadas.size() && cont<10;ini++){
-               for(int j=0;flag && j<alfabeto.size() && cont<10;j++){
-                   palavra=testadas.get(ini)+alfabeto.get(j);
-                   testadas.add(palavra);
-                   if(testaPalavra(palavra)){
-                       palavras.add(palavra);
-                       cont++;
-                   } else if (palavra.length()>10) {
-                       flag=false;
-                   }
-                   System.out.println(palavra);
-               }
-           }
-       }
+        int cont = 0, ini = 0;
+        String palavra;
+        ArrayList<String> testadas = new ArrayList<>();
+        testadas.add("");
+        boolean flag = true;
+        if(testaPalavra("")) {
+            palavras.add("");
+            cont++;
+        }
+        while (cont < 10 && flag) {
+            for (; flag && ini < testadas.size() && cont < 10; ini++) {
+                for (int j = 0; flag && j < alfabeto.size() && cont < 10; j++) {
+                    palavra=testadas.get(ini)+alfabeto.get(j);
+                    testadas.add(palavra);
+                    if (testaPalavra(palavra)) {
+                        palavras.add(palavra);
+                        cont++;
+                    } else if (palavra.length()>10) {
+                        flag = false;
+                    }
+                    System.out.println(palavra);
+                }
+            }
+        }
     }
 
-    private   Pattern criaRegex(String expressao) {
+    private Pattern criaRegex(String expressao) {
         // Substitui "+" por "|" e remove "." literal
-        troca=false;
+        troca = false;
         expressao=expressao.replaceAll(" ","");
         String regexEmJava = expressao.replaceAll("\\+", "|").replaceAll("\\.", "").replaceAll("ε","");
-        if (regexEmJava.compareTo(this.expressao)!=0){
+        if (regexEmJava.compareTo(this.expressao) != 0) {
             if(regexEmJava.contains("*"))
-            temMaximo=false;
-            else{
-
+                temMaximo=false;
+            else {
+                // Delimitar limite para a criação de palavras.
             }
-            expressao=regexEmJava;
-            troca=true;
+            troca = true;
             alfabeto = new ArrayList<>();
-//        System.out.println("Regex convertido: " + regexEmJava);
             for (int i = 0; i < regexEmJava.length(); i++) {
                 if(regexEmJava.charAt(i)>='0' && regexEmJava.charAt(i)<='9' || regexEmJava.charAt(i)>='a' && regexEmJava.charAt(i)<='z' || regexEmJava.charAt(i)>='A' && regexEmJava.charAt(i)<='Z'){
                     insereOrdenado(regexEmJava.charAt(i)+"");
@@ -110,8 +107,8 @@ public class RegexController {
 
     private void insereOrdenado(String s) {
         int i;
-        for (i = 0; i < alfabeto.size() && s.compareTo(alfabeto.get(i)+"")>0; i++);
-        if(i==alfabeto.size() || s.compareTo(alfabeto.get(i)+"")!=0){
+        for (i = 0; i < alfabeto.size() && s.compareTo(alfabeto.get(i)) > 0; i++);
+        if (i == alfabeto.size() || s.compareTo(alfabeto.get(i)) != 0) {
             alfabeto.add(i,s);
         }
     }
